Fix line spacing

--- a/src/assets/global-styles.css
+++ b/src/assets/global-styles.css
@@ -102,6 +102,12 @@ main {
     font-size: 16px;
 }
 
+@media (max-width: 600px) {
+	.title p {
+		line-height: 16px;
+	}
+}
+
 .text {
 	background-color: none;
 	max-width: 700px;
